# api/openapi/swagger.json
@@ -14,6 +14,74 @@
     "host": "musicon.space",
     "basePath": "/api/v1",
     "paths": {
+        "/album/id": {
+            "get": {
+                "description": "return all tracks from album",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "headers": {
+                            "X-CSRFTOKEN": {
+                                "type": "string",
+                                "description": "csrf token"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/artist/id": {
+            "get": {
+                "description": "return artist info",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artist"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "headers": {
+                            "X-CSRFTOKEN": {
+                                "type": "string",
+                                "description": "csrf token"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/auth": {
             "get": {
                 "security": [
@@ -25,20 +93,8 @@
                     }
                 ],
                 "description": "check user's authentication by cookie and user_id",
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "user"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "user id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
-                    }
                 ],
                 "responses": {
                     "200": {
@@ -46,6 +102,61 @@
                         "schema": {
                             "$ref": "#/definitions/user_domain.User"
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/feed": {
+            "get": {
+                "description": "return all albums",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/like/id": {
+            "post": {
+                "security": [
+                    {
+                        "cookieAuth": []
+                    },
+                    {
+                        "csrfToken": []
+                    }
+                ],
+                "description": "like track",
+                "tags": [
+                    "track"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -55,6 +166,48 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/listen/id": {
+            "post": {
+                "security": [
+                    {
+                        "csrfToken": []
+                    }
+                ],
+                "description": "listen track",
+                "tags": [
+                    "track"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "type": "string"
                         }
@@ -74,9 +227,6 @@
                 "consumes": [
                     "application/json"
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "tags": [
                     "user"
                 ],
@@ -87,16 +237,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user_delivery.userCrds"
+                            "$ref": "#/definitions/user_domain.UserCredentials"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user_domain.ResponseId"
-                        },
                         "headers": {
                             "JSESSIONID": {
                                 "type": "string",
@@ -140,35 +287,21 @@
                     }
                 ],
                 "description": "logout user",
-                "consumes": [
-                    "application/json"
-                ],
                 "tags": [
                     "user"
-                ],
-                "parameters": [
-                    {
-                        "description": "user id",
-                        "name": "id",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK"
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "type": "string"
                         }
@@ -182,7 +315,7 @@
                 }
             }
         },
-        "/music": {
+        "/me": {
             "get": {
                 "security": [
                     {
@@ -192,42 +325,94 @@
                         "csrfToken": []
                     }
                 ],
-                "description": "return all tracks",
+                "description": "get user info",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "track"
-                ],
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "user id",
-                        "name": "id",
-                        "in": "query"
-                    }
+                    "user"
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/track.Response"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "OK"
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/most_liked": {
+            "get": {
+                "description": "return albums sorted by likes count",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/new": {
+            "get": {
+                "description": "return new albums",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/popular": {
+            "get": {
+                "description": "return albums sorted by listen count",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "album"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "500": {
                         "description": "Internal Server Error",
@@ -262,14 +447,14 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user_domain.ResponseId"
-                        }
-                    },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "type": "string"
                         }
@@ -291,95 +476,6 @@
         }
     },
     "definitions": {
-        "album.Response": {
-            "type": "object",
-            "properties": {
-                "Id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "Name": {
-                    "type": "string",
-                    "example": "AlbumName"
-                },
-                "Preview": {
-                    "type": "string",
-                    "example": "AlbumPreview"
-                }
-            }
-        },
-        "artist.Response": {
-            "type": "object",
-            "properties": {
-                "Avatar": {
-                    "type": "string",
-                    "example": "ArtistAvatar"
-                },
-                "Id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "Name": {
-                    "type": "string",
-                    "example": "ArtistName"
-                }
-            }
-        },
-        "track.Response": {
-            "type": "object",
-            "properties": {
-                "Album": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/album.Response"
-                    }
-                },
-                "Artist": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/artist.Response"
-                    }
-                },
-                "Content": {
-                    "type": "string",
-                    "example": "TrackContent"
-                },
-                "Id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "Name": {
-                    "type": "string",
-                    "example": "TrackName"
-                },
-                "Preview": {
-                    "type": "string",
-                    "example": "TrackPreview"
-                }
-            }
-        },
-        "user_delivery.userCrds": {
-            "type": "object",
-            "properties": {
-                "Email": {
-                    "type": "string",
-                    "example": "example@gmail.com"
-                },
-                "Password": {
-                    "type": "string",
-                    "example": "password"
-                }
-            }
-        },
-        "user_domain.ResponseId": {
-            "type": "object",
-            "properties": {
-                "Id": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
         "user_domain.User": {
             "type": "object",
             "properties": {
@@ -408,6 +504,19 @@
                     "example": "john"
                 }
             }
+        },
+        "user_domain.UserCredentials": {
+            "type": "object",
+            "properties": {
+                "Email": {
+                    "type": "string",
+                    "example": "example@gmail.com"
+                },
+                "Password": {
+                    "type": "string",
+                    "example": "password"
+                }
+            }
         }
     },
     "securityDefinitions": {
@@ -418,7 +527,7 @@
         },
         "csrfToken": {
             "type": "apiKey",
-            "name": "X-CSRFTOKEN",
+            "name": "X-Csrf-Token",
             "in": "header"
         }
     }
