# internal/pkg/artist/delivery/http/artist_handler.go
@@ -21,7 +21,16 @@ func NewHandler(artistUseCase artist.UseCase) ArtistHandler {
 	}
 }
 
-// docs here
+// ArtistInfo
+//
+//	@Description	return artist info
+//	@Tags			artist
+//	@Produce		json
+//	@Success		200
+//	@Failure		400	{string}	errMsg
+//	@Failure		500	{string}	errMsg
+//	@Header			200	{string}	X-CSRFTOKEN	"csrf token"
+//	@Router			/artist/id [get]
 func (handler *ArtistHandler) ArtistInfo(w http.ResponseWriter, r *http.Request) error {
 	w.Header().Set(session.XCsrfToken, csrf.Token(r))
 
